# QtImageProcessor

./: CMakeLists.txt  README.md
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp
ui/: mainwindow.ui
